# BestSecurity-Meeting-Manager

./: Building a Frappe App with a Custom Vue Frontend.md  CALENDAR_INTEGRATION.md  Custom Vue 3 SPA Frontend for Meeting Manager.md  DEPLOYMENT.md  Meeting_Manager_PD.md  PHASE5_IMPLEMENTATION_SUMMARY.md  Replace MM Customer with Frappe Contact Doctype.md  Role-Based Access Control Implementation Plan.md  package.json  pyproject.toml
bestsecurity-bench/: Procfile  add_more_orders.py  create_test_orders.py
bestsecurity-bench/config/: redis_cache.conf  redis_queue.conf
bestsecurity-bench/config/pids/: redis_queue.rdb
bestsecurity-bench/logs/: database.log.2  database.log.3  database.log.4  database.log.5
bestsecurity-bench/scripts/: create_user.py
bestsecurity-bench/sites/: apps.json  apps.txt  common_site_config.json
bestsecurity-bench/sites/assets/: assets-rtl.json  assets.json  erpnext  frappe  helpdesk  meeting_manager  support_dashboard  telephony
bestsecurity-bench/sites/localhost/: touched_tables.json
desk/: components.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
desk/src/: App.vue  index.css  main.js
desk/src/components/: SidebarLink.vue
desk/src/composables/: useBookingNavigation.ts  useCalendarData.ts  useCalendarPermissions.ts  useCalendarState.ts  useDarkMode.ts  useDepartmentNavigation.ts  useEmailTemplateNavigation.ts  useMeetingTypeNavigation.ts  useNavigation.ts  usePermissions.ts
desk/src/layouts/: AppLayout.vue
desk/src/pages/: Dashboard.vue  NotFound.vue
desk/src/router/: index.ts
desk/src/stores/: auth.ts
meeting_manager/: hooks.py  modules.txt  patches.txt
meeting_manager/meeting_manager/: setup.py
meeting_manager/meeting_manager/api/: assignment.py  availability.py  booking.py  dashboard.py  oauth_callbacks.py  public.py
meeting_manager/meeting_manager/fixtures/: mm_email_template.json
meeting_manager/meeting_manager/patches/: consolidate_booking_status.py  (+3 more)
meeting_manager/public/: node_modules
public_booking/: components.d.ts  index.html  package.json  tailwind.config.js  vite.config.js
public_booking/src/: App.vue  api.js  index.css  main.js  router.js
(+1507 files in other folders)
